cluster/homelab/apps/bentopdf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bentopdf
  labels:
    app.kubernetes.io/instance: bentopdf
    app.kubernetes.io/name: bentopdf
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: bentopdf
      app.kubernetes.io/name: bentopdf
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: bentopdf
        app.kubernetes.io/name: bentopdf
    spec:
      restartPolicy: Always
      containers:
        - name: bentopdf
          image: ghcr.io/alam00000/bentopdf:2.8.8
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 512m
              memory: 512Mi
          ports:
            - name: web
              containerPort: 8080
          securityContext:
            capabilities:
              drop:
                - "ALL"
              add:
                - CHOWN
                - SETUID
                - SETGID
          livenessProbe:
            failureThreshold: 10
            initialDelaySeconds: 30
            tcpSocket:
              port: 8080
            timeoutSeconds: 2
          startupProbe:
            failureThreshold: 20
            timeoutSeconds: 2
            tcpSocket:
              port: 8080
