cluster/homelab/apps/bentopdf/gateway-api.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bentopdf-internal
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: PDF Tools
    gethomepage.dev/group: Tools
    gethomepage.dev/icon: https://bentopdf.sgenov.dev/favicon.ico
    gethomepage.dev/name: BentoPDF
spec:
  parentRefs:
    - name: internal
      namespace: istio-gateway
  hostnames:
    - "bentopdf.sgenov.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: bentopdf
          port: 80
